feat: add simd add/sub/mul expressions (#19512)